Remove blueprint from netconf-topology-singleton
We have only a single configuration knob. Convert that to OSGi Config
Admin and allow it to be manually controller. Then convert
NetconfTopologyManager to an OSGi DS Component and a
javax.inject.Singleton.

JIRA: NETCONF-1072
Change-Id: I802b51bc15ab0eb406d94471336aed34399b9cc6
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>